# python3-adv

hw2/: docker-compose.yml  generate_simple_latex.py  pyproject.toml
hw2/artifacts/: README.md  result_table.tex  temp.tex
hw2/vnazarov_latex/: latex_writer.py
hw3/: matrix_1.py  matrix_2.py  matrix_3.py  pyproject.toml
hw3/artifacts/3/: A.txt  AB.txt  C.txt  CD.txt
hw4/: task_1.py  task_2.py  task_3.py
hw4/artifacts/: fib_benchmark.txt  integration_benchmark.csv  integration_benchmark.md
hw5/: pyproject.toml  task_1.py
